@@ -1,6 +1,7 @@
 2003-03-06    John E. Joganic <john@joganic.com>
 
 	* Applied Ping Cheng's suppress patch
+	* Added evdev.c to project, contains Jonathan Paisley's oops patch
 
 2003-02-23    John E. Joganic <john@joganic.com>
 
